# We-Lift

./: .env  LICENSE  next.config.js  package-lock.json  package.json  tailwind.config.js
.github/workflows/: rust.yml
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
app/components/: AddFriendCard.tsx  Dashboard.tsx  FriendCard.tsx  Header.tsx  HomeGraphEx.tsx  Login.tsx  Settings.tsx
app/components/dashboard/: CalorieTracker.tsx  ExerciseProgress.tsx  WeightGraph.tsx
app/components/home/: CalorieIntakeEx.tsx  ExerciseProgressEx.tsx  WeightGraphEx.tsx
app/components/profile/: Dashboard.tsx  Friends.tsx  ProfileCard.tsx  Settings.tsx
app/dashboard/: page.tsx
app/lib/: authOptions.ts
app/profile/: page.tsx
backend/: Cargo.toml  README.md
backend/migrations/2023-08-02-223244_create_users/: up.sql
backend/migrations/2023-08-04-005206_create_users/: up.sql
backend/migrations/2023-08-06-233403_create_calorie_tracker/: down.sql  up.sql
backend/migrations/2023-08-06-233403_create_weight_progress/: up.sql
backend/migrations/2023-08-06-233404_create_exercise_progress/: down.sql  up.sql
backend/migrations/2023-08-06-233405_create_friends/: up.sql
backend/migrations/2023-08-06-233406_create_user_settings/: up.sql
backend/migrations/2023-08-06-233407_create_weight_progress/: down.sql  up.sql
backend/migrations/2023-08-07-221659_add_profile_picture_to_users/: up.sql
backend/src/: main.rs  schema.rs
backend/src/controllers/: mod.rs  user_controller.rs  weight_controller.rs
backend/src/models/: mod.rs  user.rs  weight.rs
(+9 files in other folders)
