[package]
name = "calorie-app-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "chrono", "serde_json"] }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
rocket_cors = "0.6.0-alpha2"
dotenvy = "0.15.7"
rocket_sync_db_pools = { version = "0.1.0-rc.3", features = ["diesel_postgres_pool"] }
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
chrono = { version = "0.4.26", features = ["serde"] }
jsonwebtoken = "8.3.0"
anyhow = "1.0"
reqwest = { version = "0.11.0", default-features = false, features = ["json", "rustls-tls"] }
scrypt = "0.8.0"
